fix: Adjust timeline label width for better alignment

--- a/src/app/components/timeline/timeline.scss
+++ b/src/app/components/timeline/timeline.scss
@@ -107,7 +107,7 @@
       top: 6px;
       left: 0;
       text-align: end;
-      width: 132px;
+      width: 116px;
     }
   }
 
